iter_language/tests/corpus/compose/valid/trigger-watch-common.iter
queue main file { path = "./.iter/queue" }

trigger edits watch {
    dir = "./src"
    include = ["*.rs"]
    per_file = true
    interval = 2s
    priority = normal
    max_signals = 10
    metadata {
        source = "edits"
    }
    target = main
}
