iter_language/tests/corpus/compose/invalid/watch-interval-and-cooldown.iter
queue main file { path = "./.iter/queue" }

trigger bad watch {
    dir = "./src"
    interval = 5s
    cooldown = 3s
    target = main
}
